
	* Add proxy username/password set functions in ecore_con.

2011-12-26  Christopher Michael (devilhorns)

        * Add Ecore_Wayland (backend to support Wayland).
        * Add Shm and Egl engines for ecore_evas to draw in Wayland.

2011-12-27 Carsten Haitzler (The Rasterman)

        * Fix mouse down grab counts going bad by missing events.

2011-12-29 Carsten Haitzler (The Rasterman)

        * Fix massive post data probile in ecore-con that would cause
        post data to be corrupted (as it was never copied into the
        ecore con url struct) or could cause crashes if the memory
        pointed to became invalid.

2012-01-04 Carsten Haitzler (The Rasterman)

        * Add HEX, TERMINAL and PASSWORD layouts to ecore-imf

2011-01-05 Jiyoun Park (Jypark)

        * Fix Ecore-evas extn (external) for multi client model.
        "Socket" creates canvas and other process can show that canvas 
        using "Plug" image object. Before only one to one communication 
        is possible, but now many "plug"s can show socket's canvas.

2011-12-26  Christopher Michael (devilhorns)

        * Add Ecore_X function to return the keycode from a given keyname.

2012-02-06  Jihoon Kim (jihoon)

        * Set ECORE_IMF_INPUT_PANEL_LAYOUT_NORMAL as default layout in ecore_imf_context_add.
        * Add Ecore_IMF function to set or get the input panel-specific data.

2012-02-07  Jihoon Kim (jihoon)

        * Support ecore_imf_context_input_panel_show/hide in XIM and SCIM module.

2012-02-08 Carsten Haitzler (The Rasterman)

        * Add ecore_con_url_http_version_set() to set url request version

2012-02-09  Jihoon Kim (jihoon)

        * Provide compose, string in key down/up event in case of scim-input-pad.

2012-02-10  Christopher Michael (devilhorns)

        * Add Ecore_Evas function to allow setting a mouse pointer from efl/elm wayland clients.

2012-02-15  Jihoon Kim (jihoon)

        * Add ecore_imf APIs to set return key type, disable return key.
